cmake_minimum_required(VERSION 3.20)

project(reference_qwen3_e2e_probe_project LANGUAGES C CXX)

if(NOT DEFINED REFERENCE_CHECKOUT_DIR)
  message(FATAL_ERROR "REFERENCE_CHECKOUT_DIR must point at a llama.cpp checkout")
endif()

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_COMMON OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_TOOLS OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(LLAMA_BUILD_SERVER OFF CACHE BOOL "" FORCE)
set(LLAMA_TOOLS_INSTALL OFF CACHE BOOL "" FORCE)
set(LLAMA_TESTS_INSTALL OFF CACHE BOOL "" FORCE)
set(LLAMA_OPENSSL OFF CACHE BOOL "" FORCE)
set(GGML_STATIC ON CACHE BOOL "" FORCE)
set(GGML_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GGML_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GGML_METAL OFF CACHE BOOL "" FORCE)
set(GGML_BLAS OFF CACHE BOOL "" FORCE)
set(GGML_ACCELERATE OFF CACHE BOOL "" FORCE)
set(GGML_OPENMP OFF CACHE BOOL "" FORCE)
set(GGML_NATIVE OFF CACHE BOOL "" FORCE)

add_subdirectory("${REFERENCE_CHECKOUT_DIR}" reference_impl)

add_executable(reference_qwen3_e2e_probe
  main.cpp
)

target_link_libraries(reference_qwen3_e2e_probe
  PRIVATE
    llama
    ggml
)

target_include_directories(reference_qwen3_e2e_probe
  PRIVATE
    "${REFERENCE_CHECKOUT_DIR}/include"
    "${REFERENCE_CHECKOUT_DIR}/src"
    "${REFERENCE_CHECKOUT_DIR}/ggml/include"
)
